--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "5.5.1",
     "expo": "~37.0.3",
+    "expo-image-picker": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "expo-permissions": "~8.1.0",
     "expo-secure-store": "~8.1.0",
@@ -21,6 +23,7 @@
     "react-native-swipeout": "2.3.3",
     "react-native-web": "~0.11.7",
     "react-navigation": "2.0.1",
+    "react-navigation-tabs": "^2.8.13",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
     "redux-logger": "3.0.6",
