--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/netinfo": "5.5.1",
     "expo": "~37.0.3",
+    "expo-asset": "~8.1.5",
+    "expo-image-manipulator": "~8.1.0",
     "expo-image-picker": "~8.1.0",
     "expo-mail-composer": "~8.1.0",
     "expo-permissions": "~8.1.0",
