--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/netinfo": "5.5.1",
+    "@react-native-community/netinfo": "^5.9.1",
     "expo": "~37.0.3",
     "expo-asset": "~8.1.5",
     "expo-image-manipulator": "~8.1.0",
